--- a/app/assets/stylesheets/components/_profile.scss
+++ b/app/assets/stylesheets/components/_profile.scss
@@ -1,3 +1,91 @@
-.profile-banner {
-  width: 100%;
+.img-profile-banner{
+  width: 620px;
+  height: 200px;
+  border: 2px solid white;
+}
+
+.avatar-profile-img {
+  border: solid 3px white;
+  border-radius: 100%;
+  width: 150px;
+  height: 150px;
+  position: relative;
+  bottom: 75px;
+  left: 40px;
+}
+
+.profile-info-page {
+  border: 2px solid white;
+  height: 197px;
+}
+
+.profile-name {
+  font-weight: bold;
+  line-height: 1.5;
+  margin-bottom: 0;
+  padding-top: 15px;
+  position: relative;
+  bottom: 79px;
+  left: 38px;
+}
+
+.profile-username {
+  color: #6e767d;
+  bottom: 82px;
+  left: 38px;
+  position: relative;
+
+
+}
+
+.profile-following {
+  position: relative;
+  bottom: 95px;
+  left: 38px;
+  font-weight: bold;
+  color: #7C3E66;
+
+}
+.profile-followers {
+  position: relative;
+  bottom: 175px;
+  left: 130px;
+  font-weight: bold;
+  color: #7C3E66;
+
+}
+
+.profile-following-text {
+  position: relative;
+  bottom: 135px;
+  left: 51px;
+  color: #6e767d;
+}
+
+.profile-followers-text {
+  position: relative;
+  bottom: 215px;
+  left: 143px;
+  color: #6e767d;
+}
+
+.bio {
+
+  position: relative;
+  color: black;
+  bottom: 96px;
+  left: 40px;
+  margin-bottom: 0;
+}
+
+.follow-button {
+  background-color: var(--letsgo-color);
+  border: 5px solid var(--letsgo-color);
+  color: white !important;
+  font-weight: 700;
+  border-radius: 30px;
+  position: relative;
+  bottom: 396px;
+  left: 485px;
+  text-decoration: none;
 }
