adicionei logo e uma foto no login

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -7,7 +7,7 @@
         <div class="panel login flex direction-column">
           <h1 title="Lets Go" class="flex justify-content-center">
             <%= link_to "#", class: "logo" do %>
-              <%= image_tag "letsgo.png", style: 'width: 130px;height: 130px' %>
+              <%= image_tag "new_logo.png", alt: "letsgo-logo", style: 'width: 220px;height: 150px' %>
             <% end %>
           </h1>
           <h3>Cadastre-se</h3>
