--- a/app/views/chatrooms/index.html.erb
+++ b/app/views/chatrooms/index.html.erb
@@ -1,7 +1,19 @@
 <div class="courses-container">
-  <ul class = "d-flex flex-column" >
-    <% @chatrooms.each do |chatroom|%>
-    <li><%= link_to "#{chatroom.user.username} - #{chatroom.followed.username}", chatroom_path(chatroom) %></li>
+  <% @chatrooms.each do |chatroom|%>
+    <%= link_to chatroom_path(chatroom) do %>
+      <div class="card-body", id="card-chat">
+        <div id="avatar-chat">
+          <%= cl_image_tag chatroom.followed.photo.key, class: "avatar-large", "data-bs-toggle" => "tooltip", "data-bs-placement" =>"top" %>
+        </div>
+        <div id="message-content">
+          <h3><%= "Eu & #{chatroom.followed.username}".titleize %></h3>
+          <% if chatroom.messages.last %>
+            <h4><%= chatroom.messages.last.content %></h4>
+          <% else %>
+            <p><%= "Envie uma mensagem para #{chatroom.followed.username}" %></p>
+          <% end %>
+        </div>
+      </div>
     <% end %>
-  </ul>
+  <%end%>
 </div>
