meio do caminho

--- a/app/assets/stylesheets/components/_profile.scss
+++ b/app/assets/stylesheets/components/_profile.scss
@@ -1,6 +1,4 @@
 .img-profile-banner{
-  width: 620px;
-  height: 200px;
   border: 2px solid white;
 }
 
@@ -20,6 +18,7 @@
 }
 
 .profile-name {
+  width: 200px;
   font-weight: bold;
   line-height: 1.5;
   margin-bottom: 0;
@@ -34,7 +33,7 @@
   bottom: 82px;
   left: 38px;
   position: relative;
-
+  width: 200px;
 
 }
 
@@ -44,6 +43,7 @@
   left: 38px;
   font-weight: bold;
   color: #7C3E66;
+  width: 200px;
 
 }
 .profile-followers {
@@ -52,7 +52,7 @@
   left: 130px;
   font-weight: bold;
   color: #7C3E66;
-
+  width: 200px;
 }
 
 .profile-following-text {
@@ -60,6 +60,7 @@
   bottom: 135px;
   left: 51px;
   color: #6e767d;
+  width: 200px;
 }
 
 .profile-followers-text {
@@ -67,6 +68,7 @@
   bottom: 215px;
   left: 143px;
   color: #6e767d;
+  width: 200px;
 }
 
 .bio {
@@ -76,16 +78,29 @@
   bottom: 96px;
   left: 40px;
   margin-bottom: 0;
+  width: 200px;
 }
 
 .follow-button {
   background-color: var(--letsgo-color);
   border: 5px solid var(--letsgo-color);
   color: white !important;
-  font-weight: 700;
+  font-weight: 600;
   border-radius: 30px;
   position: relative;
   bottom: 396px;
   left: 485px;
+  text-decoration: none;
+}
+
+.unfollow-button {
+  background-color: var(--letsgo-color);
+  border: 5px solid var(--letsgo-color);
+  color: white !important;
+  font-weight: 600;
+  border-radius: 30px;
+  position: relative;
+  bottom: 396px;
+  left: 415px;
   text-decoration: none;
 }
