--- a/app/views/chatrooms/show.html.erb
+++ b/app/views/chatrooms/show.html.erb
@@ -1,4 +1,4 @@
-  <div class="container chatroom"
+<div class="container chatroom"
     data-controller="chatroom-subscription"
     data-chatroom-subscription-chatroom-id-value="<%= @chatroom.id %>">
   <h1><%= @chatroom_name%></h1>
@@ -14,6 +14,6 @@
     <%= f.input :content,
       label: false,
       wrapper_html: {class: "flex-grow-1"}  %>
-    <%= f.submit "Enviar", class: "btn btn-primary" %>
+    <%= f.submit "Enviar", class: "btn btn-secondary" %>
   <% end %>
 </div>
