Recursive metodo ok

--- a/app/assets/stylesheets/components/_home_page.scss
+++ b/app/assets/stylesheets/components/_home_page.scss
@@ -235,6 +235,7 @@ body {
   align-items: flex-start;
   border: 2px solid var(--letsgo-background);
   padding-bottom: 10px;
+  text-decoration: none;
 }
 
 .post-even {
@@ -243,6 +244,7 @@ body {
   border: 2px solid var(--letsgo-background);
   padding-bottom: 10px;
   background-color: #FBF6F4;
+  text-decoration: none;
 }
 
 .post-body img {
