--- a/app/assets/stylesheets/config/_bootstrap_variables.scss
+++ b/app/assets/stylesheets/config/_bootstrap_variables.scss
@@ -27,3 +27,8 @@ $border-radius-sm: 2px;
 .carousel-inner {
     width: 400px !important; 
 }
+
+a {
+  text-decoration: none !important;
+  color: black !important;
+}
