--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -1,12 +1,25 @@
 .btn-small {
   font-size: 0.9em;
   border-radius: 30px;
+  background-color: #7C3E66;
+  color: white;
 }
 
 .btn-confirm {
   border-radius: 30px;
+  background-color:#7C3E66;
+  color: white;
+  &:hover{
+    background-color:#43b071;
+  }
 }
 
 .devise-page .button {
   background-color: #7C3E66;
+}
+
+.btn-cancel {
+  color: white;
+  background-color: rgb(205, 0, 0);
+  border-radius: 30px;
 }
