--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -3,6 +3,9 @@
   border-radius: 30px;
   background-color: #7C3E66;
   color: white;
+  &:hover {
+    color: white;
+  }
 }
 
 .btn-confirm {
@@ -19,7 +22,7 @@
 }
 
 .btn-cancel {
-  color: white;
+  color: white !important;
   background-color: rgb(205, 0, 0);
   border-radius: 30px;
 }
