--- a/app/views/chatrooms/show.html.erb
+++ b/app/views/chatrooms/show.html.erb
@@ -13,7 +13,7 @@
     html: {data: {action: "ajax:success->chatroom-subscription#resetForm"}, class: "d-flex" } do |f|%>
     <%= f.input :content,
       label: false,
-      wrapper_html: {class: "flex-grow-1"}  %>
-    <%= f.submit "Enviar", class: "btn btn-secondary" %>
+      wrapper_html: {class: "flex-grow-1", style: "margin-bottom: 0px !important"}  %>
+    <%= f.submit "Enviar", class: "btn btn-main" %>
   <% end %>
 </div>
