--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -9,14 +9,14 @@
         <%= f.input :photos, label: false, as: :file, input_html: { multiple: true, class: "d-none" }%>
         <h6 class="m-0 ps-1" id="upload-text">Foto/Imagem</h6>
       </label>
-      <%= f.association :event, selected: '', collection: @check_in_event %>
+      <%= f.association :event, label: false, selected: '', collection: @check_in_event %>
     </div>
-    <%= f.submit 'POSTAR', class: 'publish-box-publish-button-post' %>
+    <%= f.submit 'POSTAR', class: 'publish-box-publish-button-post-home' %>
   <% end %>
 </div>
 
 <% @posts.each_with_index do |post, index| %>
-  <%= link_to post_path(post) do%>  
+  <%= link_to post_path(post) do%>
     <div class="<%= index.even? ? 'post-even' : 'post-odd' %>">
       <div class="post-avatar">
         <%= cl_image_tag User.where(id: post.user_id).first.photo.key %>
@@ -65,5 +65,5 @@
         </div>
       </div>
     </div>
-  <% end %>  
+  <% end %>
 <% end %>
