adicionei a nova logo

--- a/app/assets/stylesheets/components/_home_page.scss
+++ b/app/assets/stylesheets/components/_home_page.scss
@@ -103,6 +103,11 @@ body {
   display: none;
 }
 
+.logo-side-bar{
+  position: relative;
+  left: 17px;
+}
+
 .feed {
   -ms-overflow-style: none;
   scrollbar-width: none;
