arrumei o botao de post no show de events

--- a/app/assets/stylesheets/components/_home_page.scss
+++ b/app/assets/stylesheets/components/_home_page.scss
@@ -185,6 +185,8 @@ body {
   margin-top: -10px;
   margin-left: 500px;
   margin-bottom: 10px;
+  position: relative;
+  bottom: 20px;
 }
 
 .publish-box-publish-button-post-home {
