notifação de usuário que seguiu você criada

--- a/app/assets/stylesheets/components/_chatroom.scss
+++ b/app/assets/stylesheets/components/_chatroom.scss
@@ -6,6 +6,7 @@
   flex-direction: column;
   justify-content: space-between;
   flex-grow: 1;
+  border-color: #7C3E66;
 
   h1 {
     border-bottom: 1px solid $gray-200;
