--- a/app/assets/stylesheets/components/_devise.scss
+++ b/app/assets/stylesheets/components/_devise.scss
@@ -1,3 +1,8 @@
+.devise-page .panel {
+  position: relative;
+  bottom: 0.5px;
+  padding-bottom: 18px !important;
+}
 .devise-page {
 
   * {
@@ -7,6 +12,7 @@
     margin: 0;
     padding: 0;
   }
+
 
   body {
     background-color: #fafafa;
