--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -10,8 +10,8 @@
               <%= image_tag "new_logo.png", alt: "letsgo-logo", style: 'width: 220px;height: 150px' %>
             <% end %>
           </h1>
-          <h3>Cadastre-se</h3>
           <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+            <h3 class="mb-3">Cadastre-se</h3>
             <%= f.error_notification %>
             <div class="form-inputs">
               <%= f.input :email,
@@ -53,18 +53,10 @@
               <%= f.input :photo, as: :file, label: 'Foto de perfil' %>
               <%= f.button :submit, "Sign up", class: "button" %>
             </div>
+            <div class="flex justify-content-center mt-2 hover-session">
+              <%= link_to "Já tem uma conta? Faça login", new_user_session_path %>
+            </div>
           <% end %>
-        </div>
-        <div class="flex separator align-items-center">
-          <span></span>
-          <div class="or">OU</div>
-          <span></span>
-        </div>
-        <div class="panel register-new-user flex direction-column align-items-center">
-          <div class="flex justify-content-center">
-            <%= "Já tem uma conta?" %>
-            <%= link_to "Faça login", new_user_session_path %>
-          </div>
         </div>
       </div>
     </div>
