--- a/app/views/shared/_feed_header.html.erb
+++ b/app/views/shared/_feed_header.html.erb
@@ -5,7 +5,18 @@
       <%= 'Mensagens' if @feed_header == 'chat' %>
       <%= 'Home' if @feed_header == 'home' %>
       <%= 'Criar Evento' if @feed_header == 'new' %>
-      <%= @event.name.titleize if @feed_header == 'show' %>
+      <%#= @event.name.titleize if @feed_header == 'show' %>
+      <% if @event && current_user == @event.user && @feed_header == 'show' %>
+        <%= @event.name.titleize%>
+        <%= link_to edit_event_path(@event) do%>
+          <i class="fas fa-edit edit-button"></i>
+        <%end%> 
+        <%= link_to event_path(@event), method: :delete, data: {confirm: "Tem certeza sobre o cancelamento do evento '#{@event.name}'?"} do%>
+          <i class="fas fa-ban delete-button"></i> 
+        <%end%>          
+      <% elsif @feed_header == 'show' %>
+       <%= @event.name.titleize %>
+      <%end%> 
       <%= 'Perfil' if @feed_header == 'profile' %>
 
       <%#= "Editar User" if @feed_header == 'editar' %>
