--- a/app/views/shared/_widgets.html.erb
+++ b/app/views/shared/_widgets.html.erb
@@ -14,6 +14,7 @@
       <% @check_ins.reverse_each do |ci| %>
         <p><%= ci.event.name.titleize %></p>
       <% end %>
+      <h2>Explorar</h2>
       <div style="width: 100%; height: 300px;"
           data-controller="mapbox"
           data-mapbox-markers-value="<%= @markers.to_json %>"
@@ -37,7 +38,11 @@
       <h2>Próximos Eventos</h2>
       <% @check_ins.reverse_each do |ci| %>
         <p><%= ci.event.name.titleize %></p>
+        <%= link_to event_check_in_path(@event), method: :delete, data: {confirm: "Cancelar presença no #{@event.name}?"}, class: 'text-decoration-none text-dark' do %>
+          <span class="material-icons"> close </span>
+        <% end %>
       <% end %>
+      <h2>Explorar</h2>
       <div style="width: 100%; height: 300px;"
           data-controller="mapbox"
           data-mapbox-markers-value="<%= @markers.to_json %>"
